<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cab App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="forgotpass"><u>FORGOT PASSWORD?</u></string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="pleasenter">Please enter email address that you registered with below and we will send you instructions to reset your password</string>
    <string name="registered_emailaddress">REGISTERED EMAIL ADDRESS</string>
    <string name="newtocabapp">NEW TO CAB:APP?</string>
    <string name="alreadyregistered">ALREADY REGISTERED?</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="country">COUNTRY</string>
    <string name="settings">Settings</string>
    <string name="gps_enable">Enable GPS!</string>
    <string name="gps_alert_message">For the fastest and most accurate location detection: Turn on GPS in location settings.</string>
    <string name="mobile">MOBILE NUMBER</string>
    <string name="amend">Amend</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="nofav">No Favourites</string>
    <string name="hailingdrivier">Hailing a Driver</string>
    <string name="amendorcancel">Do you want to amend or cancel the pending booking?</string>
    <string name="norecent">No Recent</string>
    <string name="enterpasswordsentvia">ENTER PASSWORD SENT VIA EMAIL</string>
    <string name="newpassword">NEW PASSWORD</string>
    <string name="confirmnewpassword">CONFIRM NEW PASSWORD</string>
    <string name="firstname">FIRST NAME</string>
    <string name="lastname">LAST NAME</string>
    <string name="confirmpassword">CONFIRM PASSWORD</string>
    <string name="favs">Favourites</string>
    <string name="recent">Recent</string>
    <string name="towncity">TOWN, CITY OR POSTCODE</string>
    <string name="justsendyou4">We have just sent you a 4 digit activation code via SMS so please enter below</string>
    <string name="fourdigitcode">4 DIGIT CODE</string>
    <string name="notreceivedcode">If you have not received the code within the next couple of minutes please select re-select below</string>
    <string name="edit">Edit</string>
    <string name="addNew">Add New</string>
    <string name="addressedit">EDIT</string>
    <string name="prebook">Pre-Book</string>
    <string name="now">Now</string>
    <string name="aboutus">About us</string>
    <string name="tandc">Terms and Conditions</string>
    <string name="feedback">Feedback</string>
    <string name="viewtutorial">View Tutorial</string>
    <string name="logout">Logout</string>
    <string name="cablocation_text">Cab:app is available in many locations across the UK &amp; Ireland - tap below to see if we\'re in your area and if not please let us know!</string>
    <string name="nobookings">No Bookings</string>
    <string name="preferredmethod">Preferred Method:</string>
    <string name="luggage_text">\u0022I will be travelling with large bags and will require a car with boot.\u0022</string>
    <string name="quickercab">May get a cab quicker and fixed price?</string>
    <string name="extradetails">TAP TO ADD EXTRA DETAILS...</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Hail Now</item>
        <item>Pre-Book</item>
        <item>My Bookings</item>
        <item>Favourites</item>
        <item>Our Locations</item>
        <item>More</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/hailnowicon</item>
        <item>@drawable/prebookicon</item>
        <item>@drawable/passengers</item>
        <item>@drawable/favorites</item>
        <item>@drawable/cabapplocations_icon</item>
        <item>@drawable/more</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="pick_up_point">Pick-up</string>
    <string name="add">Add</string>
    <string name="airport_dropoff">SELECT AN AIRPORT DROP OFF</string>
    <string name="notgoing_airport">Add other airport or location-fixed price may apply?</string>
    <string name="mydetails">My Details</string>
    <string name="paymentmethod">Payment Methods</string>
    <string name="preferredmethods">Preferred Methods</string>
    <string name="location">Location</string>
    <string name="on_map">On Map</string>
    <string name="favorites">Favourites</string>
    <string name="citylist">Cab:app Locations</string>
    <string name="my_places">My Places</string>
    <string name="drop_off_point">Drop Off</string>
    <string name="when">WHEN</string>
    <string name="asap">ASAP</string>
    <string name="pre_book">Pre-Book</string>
    <string name="passengers">Passengers</string>
    <string name="accessibility_options">Accessibility Options</string>
    <string name="wheelchair_user">Wheelchair User</string>
    <string name="hearing_impaired">Hearing Impaired</string>
    <string name="add_your_comments_">Add Your Comments..</string>
    <string name="comments">Comments</string>

    <!-- *****************TandC DATA*************************** -->
    <string name="tandc_data">At cab:app, we want to ensure that you can use our services via our website www.cabapp.net (“Website”) and smart phone app (“App”). We have therefore set out our Terms and Conditions (“Terms”) by which we provide you with our services and which apply to all users (whether they are drivers or passengers). We ask that you please read the Terms carefully when you download our App or access our Website and to print and retain a copy of these Terms for your future reference.The provisions of these Terms are legally binding on you. By downloading the App or accessing our Website or by making any use of the Website or the services provided by cab:app (“cab:app Service(s)”), you are indicating your agreement to be bound by these Terms. If you do not agree with the provisions of these Terms, you will not be able to use the Website or the App and all its features and functionalities.
To use the cab:app Service you will need your own mobile or smart phone, tablet or other device that allows you to access the internet. cab:app’s multiplatform system supports i-Phone, iPad and most Android smart phones.
To use the cab:app Service you expressly represent and warrant that you are legally entitled to enter these Terms, that you are at least 18 years of age and that you have authority and capacity to enter into these Terms. The cab:app Service is not available to persons under the age of 18.
Please see our Privacy Policy [INSERT LINK] for more information about how we collect, use, and share information on the Website.
cab:app may modify these Terms at any time. Any such modification shall be posted on the Website. By using the cab:app Services, you agree to be bound by any such changes to these Terms. It is therefore important that you review these Terms and the Website regularly and that if you do not agree with any of these Terms, you must immediately discontinue your use of the cab:app Services and Website.
FOR THE AVOIDANCE OF DOUBT CAB:APP DOES NOT PROVIDE OR AGREE TO PROVIDE TRANSPORTATION SERVICES TO ANY USER OF THE CAB:APP SERVICES, WEBSITE AND/OR THE APP AND CAB:APP IS NOT A TRANSPORTATION CARRIER. IT IS UP TO THE DRIVER TO OFFER TRANSPORTATION AND TAXI SERVICES WHICH MAY BE FACILITATED THROUGH USE OF THE CAB:APP SERVICES.  CAB:APP FACILITATES A METHOD TO OBTAIN SUCH THIRD PARTY TRANSPORTATION AND TAXI SERVICES, BUT DOES NOT AND DOES NOT INTEND TO PROVIDE TRANSPORTATION SERVICES OR ACT IN ANY WAY AS A TRANSPORTATION CARRIER, AND HAS NO RESPONSIBILITY OR LIABILITY FOR ANY TRANSPORTATION SERVICES PROVIDED TO YOU BY SUCH THIRD PARTIES. ANY CONTRACT FOR THE PROVISION OF SUCH TRANSPORTATION AND TAXI SERVICES SHALL BE BETWEEN THE PASSENGER AND THE DRIVER AND ANY LAWS, REGULATIONS, RULES, GUIDES AND POLICIES GOVERNING THE USE AND OPERATION OF A TAXI APPLICABLE TO THE RELEVANT AREA THE TAXI OPERATES (“RELEVANT TAXI LAWS”) SHALL PREVAIL ONCE A DRIVER ACCEPTS TO PICK UP AND DROP OFF A PASSENGER. YOU ARE RESPONSIBLE FOR ENSURING COMPLIANCE WITH ANY RELEVANT TAXI LAWS AND COMPLYING WITH ALL ROAD TRAFFIC AND ROAD VEHICLE LAWS OR REGULATIONS (INCLUDING BUT NOT LIMITED TO COMPLIANCE WITH THE ROAD VEHICLES (CONSTRUCTION AND USE) REGULATIONS 2003 (AS AMENDED). CAB:APP SHALL NOT BE LIABLE FOR ANY BREACH BY YOU OF SUCH RELEVANT TAXI LAWS OR ANY ROAD TRAFFIC AND ROAD VEHICLE LAWS OR REGULATIONS. CAB:APP RECOMMENDS ALL DRIVERS CHECK WITH THEIR LOCAL AUTHORITY FOR FURTHER INFORMATION ON THE RELEVANT TAXI LAWS. </string>

    <!-- *****************ABOUT US DATA*************************** -->
    <string name="aboutus_data">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <!-- Passengers Count -->
    <string-array name="passengers_count_4">
        <item>1-4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="passengers_count_5">
        <item>1-5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="done">Done</string>
    <string name="selectcard">Select a Card</string>
    <string name="addnewcard">Or Add a New Card</string>
    <string name="booking_details">Booking Details</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="favourites">Favourites</string>
    <string name="on_meter">On meter</string>
    <string name="price">PRICE</string>
    <string name="pick_up">PICK UP</string>
    <string name="drop_off">DROP OFF</string>
    <string name="active">Active</string>
    <string name="track">Track</string>
    <string name="contact">Contact</string>
    <string name="history">History</string>
    <string name="all">All</string>
    <string name="account">Account</string>
    <string name="no_items">No items</string>
    <string name="type_here">Type Here</string>

</resources>