<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191918" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_newcab_bottom" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_icon"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="#f36a02"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/tv_email"
                android:layout_marginTop="5dp"
                android:background="#fff"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:singleLine="true"
                android:textColor="#191917" >
            </EditText>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_email"
                android:layout_below="@+id/et_email"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="#f36a02"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/tv_password"
                android:layout_marginTop="5dp"
                android:background="#fff"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="#191917" >
            </EditText>

            <TextView
                android:id="@+id/tvlogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/et_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/registration_btn_selector"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="Log in"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_forgorpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvlogin"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="12dp"
                android:clickable="true"
                android:text="@string/forgotpass"
                android:textColor="#f36a02"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/icon" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/registration_btn_selector"
                android:clickable="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="Sign Up"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_newcab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvSignUp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_forgorpassword"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/newtocabapp"
                android:textColor="#f36a02"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvSignUp_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/registration_btn_selector"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="Sign Up"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_newcab_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvSignUp_bottom"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/newtocabapp"
        android:textColor="#f36a02"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>