<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191918" >

    <include
        android:id="@+id/include1"
        layout="@layout/common_top_bar_maps" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rl_done"
        android:layout_below="@+id/include1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp" >

            <TextView
                android:id="@+id/tv_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/firstname"
                android:textColor="#f36a02"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/tv_firstname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="#fff"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center"
                android:inputType="textCapSentences|textNoSuggestions"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_firstname"
                android:layout_below="@+id/et_firstname"
                android:layout_marginTop="15dp"
                android:text="LAST NAME"
                android:textColor="#f36a02"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/tv_lastname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="#fff"
                android:ellipsize="end"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences|textNoSuggestions"
                android:singleLine="true" />

            <TextView
                android:id="@+id/tv_registerd_emailaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_lastname"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/country"
                android:textColor="#f36a02"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_mobileno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/rel_mobileno"
                android:layout_alignRight="@+id/et_lastname"
                android:layout_marginRight="45dp"
                android:text="@string/mobile"
                android:textColor="#f36a02"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/rel_mobileno"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_registerd_emailaddress"
                android:layout_marginTop="5dp"
                android:background="#fff" >

                <Spinner
                    android:id="@+id/spinner_countrycode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_personaltitledrodown"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/downarrow"
                    android:clickable="false"
                    android:text="" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_mobileno"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/rel_mobileno"
                android:layout_toRightOf="@+id/rel_mobileno"
                android:background="#fff"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="5dp"
                android:textSize="18sp" >
            </EditText>
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="1dp"
        android:background="@drawable/registration_btn_selector"
        android:clickable="true" >

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="1dp"
            android:drawableLeft="@drawable/yes"
            android:drawablePadding="12dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="@dimen/list_padding"
            android:text="@string/done"
            android:textColor="@color/textview_unselected"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>